Amélioration du template du navbar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,22 +31,26 @@
 
 {% block body %}
     {% block navbar %}
-    <nav id="menu" class="navbar navbar-expand sticky-top navbar-dark bg-dark">
-        <div class="container-fluid">
+    <nav id="menu" class="navbar navbar-expand-md sticky-top navbar-dark bg-dark">
             {% block logo %}
-            <a href="{{ path('core_structure_map') }}" class="navbar-brand">
+            <a href="{{ path('core_structure_map') }}" class="navbar-brand mr-2">
                 <img src="{{ asset('images/pigass_medium.png') }}" alt="logo PIGASS">
             </a>
             {% endblock logo %}
-            <p class="navbar-brand m-0">{% block headline %}Adhésions{% endblock headline %}</p>
-            <ul class="nav navbar-nav row">
+            <p class="navbar-text m-0 mr-auto ml-auto">{% block headline %}Adhésions{% endblock headline %}</p>
+            <button class="navbar-toggler ml-2" type="button" data-toggle="collapse" data-target="#navbar-collapsable" aria-controls="navbar-collapsable" aria-expanded="false" aria-label="Afficher le menu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="navbar-collapse collapse ml-2 flex-grow-0" id="navbar-collapsable">
+            <ul class="nav navbar-nav align-items-center ml-auto">
                 {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                    <li class="col-sm p-0">
-                        <a class="btn btn-dark" href="{{ path('fos_user_resetting_request') }}" title="Réinitialiser le mot de passe">
+                    <li class="nav-item p-0">
+                        <a class="btn btn-dark btn-block" href="{{ path('fos_user_resetting_request') }}" title="Réinitialiser le mot de passe">
                             <i class="fas fa-question"></i> Mot de passe oublié
                         </a>
                     </li>
-                    <li class="col-sm p-0">
+                    <li class="nav-item p-0">
                         <form action="{{ path("fos_user_security_check") }}" method="post" class="form-inline align-items-center">
                             <input type="text" id="username" name="_username" required="required" class="col-sm-5 form-control-sm" placeholder="Adresse e-mail"/>
                             <input type="password" id="password" name="_password" required="required" class="col-sm-5 form-control-sm" placeholder="Mot de passe"/>
@@ -57,28 +61,28 @@
                     </li>
                 {% else %}
                     {% if is_granted('ROLE_MEMBER') %}
-                        <li class="col-sm p-0">
-                            <a class="btn btn-dark" href="{{ path('user_register_list') }}" title="Mon tableau de bord">
+                        <li class="nav-item p-0">
+                            <a class="btn btn-dark btn-block" href="{{ path('user_register_list') }}" title="Mon tableau de bord">
                                 <i class="fas fa-id-card"></i> {{ app.user.username }}
                             </a>
                         </li>
                     {% endif %}
                     {% if is_granted('ROLE_STRUCTURE') %}
-                        <li class="col-sm p-0">
-                            <a class="btn btn-dark" href="{{ path('app_dashboard_admin', {'slug': app.session.get('slug')}) }}" title="Tableau de bord de la structure">
+                        <li class="nav-item p-0">
+                            <a class="btn btn-dark btn-block" href="{{ path('app_dashboard_admin', {'slug': app.session.get('slug')}) }}" title="Tableau de bord de la structure">
                                 <i class="fas fa-star"></i> {{ app.session.get('slug')|capitalize }}
                             </a>
                         </li>
                     {% endif %}
                     {% if is_granted('ROLE_ADMIN') %}
-                        <li class="col-sm p-0">
-                            <a class="btn btn-dark" href="{{ path('app_dashboard_superadmin') }}" title="Administration du site">
+                        <li class="nav-item p-0">
+                            <a class="btn btn-dark btn-block" href="{{ path('app_dashboard_superadmin') }}" title="Administration du site">
                                 <i class="fas fa-jedi"></i> Administration
                             </a>
                         </li>
                     {% endif %}
-                    <li class="col-sm p-0">
-                        <a class="btn btn-dark" href="{{ path('fos_user_security_logout') }}" title="Se déconnecter">
+                    <li class="nav-item p-0">
+                        <a class="btn btn-dark btn-block" href="{{ path('fos_user_security_logout') }}" title="Se déconnecter">
                             <i class="fas fa-sign-out-alt"></i> Se déconnecter
                         </a>
                     </li>
